crates/slopty-proto/tests/snapshots/golden__conversation__worker_permission_released.snap
---
source: crates/slopty-proto/tests/golden.rs
expression: hex(&bytes)
---
15 00 00 00 11 01 10 01 02 03 04 05 06 07 08 09
0a 0b 0c 0d 0e 0f 10 03 01
